k3s/apps/nginx/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-test
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
