k3s/apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx-test
spec:
  rules:
  - host: nginx.local
    http:
      paths: /
      pathType: Prefix
      backend:
        service:
          name: nginx
          port:
            number: 80
